Fix toast overlapping with the logo

--- a/Explorer/wwwroot/css/site.css
+++ b/Explorer/wwwroot/css/site.css
@@ -69,7 +69,7 @@ a, .btn-link {
 }
 
 .toast {
-  margin: 0.75rem 1.5rem;
+  margin: 0.75rem 1.5rem 0.75rem 4rem;
   border-radius: 0;
 }
 
